syntax = "proto3";

package employeePackage;

message Employee {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string gender = 4;
    string race = 5;
    string position = 6;
    string startDate = 7;
    string shiftPreference = 8;
    string branchName = 9;
    string region = 10;
    string country = 11;
    string phoneNumber = 12;
    string email = 13;
    int32 version = 14;
    string signInType = 15;
    string providerId = 16;
    string password = 17;
    string userRole = 18;
    string division = 19;
}

message EmployeeUpdate {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string shiftPreference = 8;
    string phoneNumber = 12;
}

message EmployeeId {
    string id = 1;
}

message EmployeeResponsePayload{
    int32 status = 1;
    Employee data = 2;
}

service EmployeeService {
    rpc GetEmployee(EmployeeId) returns (EmployeeResponsePayload) {};
}
