// Original file: proto/employee.proto


export interface EmployeeUpdate {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'shiftPreference'?: (string);
  'phoneNumber'?: (string);
}

export interface EmployeeUpdate__Output {
  'id': (string);
  'firstName': (string);
  'lastName': (string);
  'shiftPreference': (string);
  'phoneNumber': (string);
}
